--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,9 @@ p {
 }
 
 .whatsapp-button {
-  display: inline-block;
+  display: block;
+  margin: 18px auto 0;
+  text-align: center;
   margin-top: 18px;
   padding: 12px 28px;
   background-color: #ff8c94;
